# augmented_baker

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/src/app/: config.py  main.py
backend/src/app/agent/: __init__.py  agent.py
backend/src/app/agent/context/: __init__.py  now.py  recent_orders.py  stock_alerts.py
backend/src/app/agent/middleware/: __init__.py  dynamic_briefing.py  stock_briefing.py
backend/src/app/agent/prompts/: __init__.py  system_prompt.py
backend/src/app/agent/tools/: __init__.py  notion.py  pantry_photo.py  supplier_orders.py
backend/src/app/api/v1/: chat_controller.py  health_controller.py  router.py
backend/src/app/core/: dependencies.py  logging.py
backend/src/app/prompts/: __init__.py  madeleine.py
backend/src/app/repositories/notion/: __init__.py  _flatten.py  client.py  databases.py  notion_repository.py
backend/src/app/repositories/smtp/: __init__.py  client.py  smtp_repository.py
backend/src/app/schemas/: chat.py  health.py
backend/src/app/services/: chat_service.py  email_service.py  health_service.py
frontend/: Dockerfile  README.md  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/api/chat/: route.ts  sse.ts
frontend/components/ai-elements/: attachments.tsx  pantry-stock-approval.tsx  prompt-input.tsx  supplier-approval.tsx
