[project]
name = "augmented-baker-backend"
version = "0.1.0"
description = "Backend API for Madeleine's bakery AI assistant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]==0.136.0",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "langchain>=1.2.15",
    "langchain-core>=1.0",
    "langchain-anthropic>=1.0",
    "notion-client>=3.0,<3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[dependency-groups]
dev = [
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
